# FleetOps

./: .env.example  .gitignore  AGENT_INTEGRATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  FLEETOPS_SPEC.md  LICENSE  MONETIZATION.md  Makefile  PROJECT_STATUS.md  README.md  REVIEW.md  SECURITY.md  TEST_PLAN.md  docker-compose.prod.yml  docker-compose.yml  fleetops.db  futures.txt  pyproject.toml  railway.toml  render.yaml  test_ws.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  cli.py  fleetops.db  openapi.yml  requirements.txt  test.db
backend/alembic/versions/: 001_initial.py  002_add_indexes.py  003_add_agent_instances.py  004_add_audit_cost_pricing.py
backend/app/: __init__.py  main.py
backend/app/adapters/: all_adapters.py  auth0_adapter.py  auth_adapter.py  autogen_adapter.py  cdn_adapter.py  crewai_adapter.py  db_adapter.py  discord_bot_adapter.py  email_adapter.py  hermes_adapter.py  ide_agent_adapter.py  llm_providers.py  llm_service_adapter.py  media_generation_adapter.py  monitoring_adapter.py  okta_adapter.py  ollama_adapter.py  openclaw_adapter.py  openwebui_adapter.py  personal_agent_adapter.py  secrets_adapter.py  slack_bot_adapter.py  storage_adapter.py
backend/app/core/: a2a.py  agent_model_manager.py  approval_flow.py  audit.py  auth.py  (+29 more)
backend/examples/: model_management_demo.py
backend/fleetops_cli/: __init__.py  client.py  ide.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_adapters.py  test_agent_service.py  test_auth.py  test_endpoints.py  test_security.py  test_tasks.py
cli/: fleetops  fleetops_cli.py
connectors/: base.py
connectors/claude-code/: connector.py
connectors/codex/: connector.py
connectors/copilot/: connector.py
deployments/docker/: docker-compose.yml
deployments/k8s/: backend.yml  frontend.yml  multi-region.yml  namespace.yml  postgres.yml  redis.yml  secrets.yml
docs/: AGENT_ARCHITECTURE.md  AGENT_DEPLOYMENT.md  AGENT_INTEGRATION.md  API_REFERENCE.md  APP_FLOW_DIAGRAMS.md  ARCHITECTURE.md  ARCHITECTURE_VISION.md  COST_TRACKING_EXAMPLES.md  FUNDRAISING_STRATEGY.md  GETTING_STARTED.md  HOW_OPENWEBUI_WORKS.md  OPENWEBUI_INTEGRATION.md  REFINEMENT_PLAN.md  SECURITY_DEEP_DIVE.md  SECURITY_PACKAGES.md  UI_ARCHITECTURE.md  capture-screenshots.js  package.json  screenshot-script.js
frontend/: colored-pages.js  index.html  new-pages.js  package-lock.json  package.json  screen.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
ide-extensions/vscode/: package.json
mcp-server/: README.md  fleetops-mcp.py  pyproject.toml
mobile/: .gitkeep
scripts/: backup.sh  deploy.sh  validate_env.py  verify_setup.py
sdk/python/: setup.py
templates/sales/: whatsapp-sales.json
(+154 files in other folders)
