[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetops-cli"
version = "0.1.0"
description = "FleetOps CLI — Universal agent approval and governance tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FleetOps Team", email = "team@fleetops.dev"}
]
keywords = ["cli", "agents", "ai", "governance", "approval", "cost-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
fleetops = "fleetops_cli.cli:main"

[project.urls]
Homepage = "https://github.com/LunarPerovskite/FleetOps"
Documentation = "https://docs.fleetops.dev"
Repository = "https://github.com/LunarPerovskite/FleetOps"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["fleetops_cli*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
