[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetops-mcp"
version = "0.1.0"
description = "FleetOps MCP Server — Model Context Protocol for AI Agent Governance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FleetOps Team", email = "team@fleetops.dev"}
]
keywords = ["mcp", "agents", "ai", "governance", "approval", "claude", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
fleetops-mcp = "fleetops_mcp.server:main"

[project.urls]
Homepage = "https://github.com/LunarPerovskite/FleetOps"
Documentation = "https://docs.fleetops.dev/mcp"
Repository = "https://github.com/LunarPerovskite/FleetOps"
